# fastapi-base-crud

./: README.md  pyproject.toml
crud/: base.py
crud/iao/: base.py
example/: .env.example  alembic.ini  db.Dockerfile  db.py  example.py  models.py  schemas.py
example/alembic/: env.py
example/alembic/versions/: ea2b26e93985_initialize_dummy_table.py
