[project]
name = "fastapi-base-crud"
version = "0.1.0"
description = "An example of a base crud to be used with pydantic schema's and sqlalchemy model, meant for integration with fastapi."
readme = "README.md"
requires-python = ">=3.13"
authors = [
    {name = "Goof Blokker", email = "goofb@live.nl"}
]
dependencies = ["sqlalchemy (>=2.0.44,<3.0.0)", "pydantic[email] (>=2.12.4,<3.0.0)", "psycopg2 (>=2.9.11,<3.0.0)", "asyncpg (>=0.30.0,<0.31.0)"]

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 88
target-version = "py313"
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.13"
strict = true
ignore_missing_imports = true
allow_untyped_defs = true

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.0"
ruff = "^0.14.4"
mypy = "^1.18.2"
alembic = "^1.17.1"
sqlalchemy-stubs = "^0.4"

